--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
 
     <checkstyle.skip>true</checkstyle.skip>
     
-    <endpoints.project.id>sobike44</endpoints.project.id>
+    <endpoints.project.id>webandcloud-273109</endpoints.project.id>
   </properties>
 
   <dependencies>
